# LocalBTrace

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/rhea/sample/android/app/: App.kt  FirstFragment.kt
app/src/main/res/layout/: fragment_first.xml
app/src/main/res/values/: strings.xml
local-trace-processor/: build.gradle
local-trace-processor/src/main/java/com/jay/local_trace_processor/: LocalTraceProcessor.java
localtrace/: CMakeLists.txt  build.gradle
localtrace/src/androidTest/java/com/jay/localtrace/: ExampleInstrumentedTest.java
localtrace/src/main/: AndroidManifest.xml
localtrace/src/main/cpp/: hook.cpp
localtrace/src/main/java/com/jay/localtrace/: HookConfig.java  LocalTraceSession.kt
localtrace/src/main/java/com/jay/localtrace/utils/: TraceDownloadUtils.kt  TraceLogger.kt  TraceProcessUtils.kt
localtrace/src/test/java/com/jay/localtrace/: ExampleUnitTest.java
rhea-tool/rhea-trace-processor/src/main/java/com/bytedance/rheatrace/processor/: Main.java
